# patron.cpp

./: CMakeLists.txt  README.md
patron/commands/: annotations.h  command_execution.h  command_function.h  command_info.cpp  command_info.h  commandinfo.h  exceptions.cpp  exceptions.h  type_reader.h
patron/modules/: module_base.cpp  module_base.h  modulebase.h
patron/results/: command_error.h  command_result.h  result.h  type_reader_result.h
patron/services/: module_service.h  module_service_base.h  moduleservice.cpp  moduleservice.h
patron/utils/: concepts.h  join.h  lexical_cast.cpp  lexical_cast.h  reflection.h  strings.cpp  strings.h
